# MRE-pyright-submodule-import

./: .gitignore  README.md  pyproject.toml  test_nops_use.py
.github/workflows/: charmcraft-pack.yaml
nops/: __init__.py  main.py
ops/: __init__.py  main.py
test/: test_main_invocations.py
