[project]
name = "mre-pyright-import"
description = "..."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name="The Charm Tech team at Canonical Ltd.", email="charm-tech@lists.launchpad.net"}]
classifiers = ["Programming Language :: Python :: 3"]
version = "0.0.1b1"

[tool.pyright]
include = ["ops/*.py", "ops/_private/*.py", "test/*.py", "test/charms/*/src/*.py"]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportIncompatibleMethodOverride = false
reportImportCycles = false
reportMissingModuleSource = false
reportPrivateUsage = false
reportUnnecessaryIsInstance = false
reportUnnecessaryComparison = false
reportUnnecessaryTypeIgnoreComment = "error"
disableBytesTypePromotions = false
stubPath = ""
